*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9097 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -476,6 +476,10 @@ ExtraPlayerInfo.balancedTrainer=A %s trainer who is neither attack nor defence-m
 ManagerButtons.writeInGuestbook=Write in Guestbook
 LineupShortcut.lineup=Lineup
 
+#Transfer prices
+MedianTransferPrice.median=Median price
+MedianTransferPrice.average=Average price
+
 #forum
 AddLeaveConfButton.LeaveForum=Leave forum
 AddLeaveConfButton.alert=Click on the 'Save' button on the next page to leave this forum.
@@ -485,6 +489,7 @@ HideSignatures.signaturetoggle=Signature
 MarkUnread.markunread=Mark unread from here
 EmbedMedia.EmbeddedImage=Embedded Image
 ForumStripHattrickLinks.ask=Do you want to strip the Hattrick server from links to make them usable in the forum?
+MarkAllAsRead.title=Mark all threads in all forums as read
 
 # ForumTemplates
 ForumTemplates.make=Make template from post
@@ -526,10 +531,6 @@ Filters.ok=Ok
 Filters.minimum=At least
 Filters.maximum=Maximum
 
-#Transfer prices
-MedianTransferPrice.median=Median price
-MedianTransferPrice.average=Average price
-
 
 matchOrder.swapPositions=Swap sides
 matchOrder.staminaDiscount=Stamina effect
@@ -546,11 +547,13 @@ matchOrder.tournamentMatch=Tournament match
 
 
 # SkillTable
+SkillTable.header=Skill Table
+SkillTable.switchView=Switch view
 SkillTable.addHomegrown=Add home grown players
+SkillTable.showTimeInClub=Show time in club
 SkillTable.switchView.title=Switch the view of the table.
 SkillTable.addHomegrown.title=Adds all homegrown players from the current senior squad
 SkillTable.showTimeInClub.title=Shows time since player joined the club's senior squad
-skilltable.rebought_youthplayer=rebought youth player
 CanBePromotedIn=Could be promoted in
 Loyalty=Loyalty
 Loyalty.abbr=Lo
@@ -561,6 +564,9 @@ Last_stars_decline=Last brown stars
 Last_match_played_as_at=Played %1 min as %2 in his last match on the %3.
 Last_match_didnot_play=Has not played yet.
 TransferCompare=Transfer Compare
+
+skilltable.youthplayer=Youthplayer
+skilltable.rebought_youthplayer=rebought youth player
 
 #confirms
 ConfirmActions.bid=Do you wish to bid for this player? The price is %s.
@@ -584,13 +590,10 @@ links.custom.help=Help
 links.custom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 links.custom.helptext2=You also can export your links and share them. Click on the export button and select a file to save the link. Links are appended to the file, hence you can save several links in one file. To import links go to the import section in the preferences. Only entries in the selected file will be imported, which in this case are your links. None of your existing links will be deleted.
 
-
 #following string uses pluralForms
 notify.newMail=You have received %s new mail.;You have received %s new mails.
 #following string uses pluralForms
 notify.newForumMessage=There is %s new forum reply to you.;There are %s new forum replies to you.
-
-MyMonitor.htLive=HT Live
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -599,18 +602,30 @@ MyMonitor.htLive=HT Live
 copy.playerad=Copy player ad
 copy.playerad.copied=The player ad has been copied to the clipboard.
 copy.matchid=Click to copy matchID to clipboard
-
-copy.postid=Copy PostID to clipboard
-
-
-
+copy.matchid.copied=The match ID has been copied to the clipboard.
 copy.skilltable.title=Copy skill table to clipboard (in HT-ML)
 copy.skilltable.copied=The skill table has been copied to the clipboard.
-copy.matchid.copied=The match ID has been copied to the clipboard.
+copy.postid=Copy PostID to clipboard
 copy.postid.copied=Post ID [post\=%s] has been copied to the clipboard.
+copy.posting=Copy in %s style
+copy.posting.title=Copy Posting in %s style
 copy.posting.copied=Posting %s has been copied to the clipboard.
-specialCopy.hint=Copy selection with Ctrl + C.
-specialPaste.hint=Paste with Shift + Left Click.
+copy.posting.style.ht-ml=HT-ML
+copy.posting.style.wiki=wiki
+copy.posting.style.raw=raw
+copy.posting.style.last=last
+copy.ratings.both=Copy ratings (in HT-ML)
+copy.ratings.home=Copy home ratings (in HT-ML)
+copy.ratings.away=Copy away ratings (in HT-ML)
+copy.ratings.copied=The ratings have been copied to the clipboard.
+copy.trainingReport=Copy training report
+copy.trainingReport.copied=Training report has been copied.
+copy.scoutComment=Copy scout comment
+copy.scoutComment.copied=Scout comment has been copied.
+copy.playerSource=Copy player source
+copy.playerSource.copied=Player source has been copied.
+copy.fixturesSource=Copy fixtures source
+copy.fixturesSource.copied=Fixtures source has been copied.
 
 #matches
 matches.income=Income\:
@@ -622,6 +637,8 @@ matches.defense=def
 matches.attack=att
 matches.indfreekick=Ind. set pieces
 matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+
+matches.lineup.totalStars=Total stars
 
 #matchdetail
 match.ratings.midfield=Midfield
@@ -639,7 +656,6 @@ match.ratings.ifkshort=I
 
 
 
-
 #teampopups
 LastLineup=Last lineup
 
@@ -653,8 +669,6 @@ flagCollectionToMap.MEast=Middle East
 flagCollectionToMap.SAmerica=South America
 flagCollectionToMap.World=World
 
-
-
 # TransferSearchResultFilters
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
@@ -664,7 +678,6 @@ RapidId.senior=Senior
 RapidId.youth=Youth
 RapidId.tournaments=Tournaments
 RapidId.tournament=Tournament
-
 
 # HTMSPrediction
 
@@ -682,10 +695,7 @@ CrossTable.noMatches=No matches have been played yet.
 MyMonitor.teams=%s team in monitor;%s teams in monitor
 MyMonitor.addHelp=Go to the team that you want to monitor, and you will see a box on the sidebar to add that team.
 # %n, %t and %i will be replaced by team name, type and ID respectively
-
-# MarkAllAsRead
-MarkAllAsRead.title=Mark all threads in all forums as read
-
+MyMonitor.htLive=HT Live
 
 # tickers
 
@@ -694,6 +704,7 @@ MarkAllAsRead.title=Mark all threads in all forums as read
 # fennec ui
 pageAction.rightMenu=Show right menu
 pageAction.leftMenu=Show left menu
+
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -709,6 +720,7 @@ datetimestrings.short_days=d;d
 button.copy=Copy
 button.up=Up
 button.down=Down
+button.goto=Go to %s
 
 
 oauth.instructions=A link to chpp.hattrick.org will appear below shortly. Open the link, fill in your username and password to get a verification code, and copy it to the input below in order to authorize FoxTrick to access your team data. FoxTrick will not know your password in the whole process.
@@ -723,8 +735,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 ReadHtPrefs.HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
 
-# End of IN-GAME STRINGS.
+specialCopy.hint=Copy selection with Ctrl + C.
+specialPaste.hint=Paste with Shift + Left Click.
 
+# End of IN-GAME STRINGS.
 
 # -----------------------------------------------------------------------------
 # option function strings
