*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9103 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -252,6 +252,7 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
 TeamStats.General=Generel
@@ -291,6 +292,14 @@ ForumTemplates.delete.ask=Slet skabelon?
 #ForumPreview
 
 #ForumYouthIcons
+ForumYouthIcons.youthplayerid=Indsæt ungdom spiller link.
+ForumYouthIcons.youthteamid=Indsæt ungdoms hold link.
+ForumYouthIcons.youthmatchid=Indsæt ungdoms kamp link.
+ForumYouthIcons.youthseries=Indsæt ungdoms liga link.
+ForumSpecialBBCode.q=Tilføj citat
+ForumSpecialBBCode.br=Tilføje linjeskift
+ForumSpecialBBCode.clock=Tilføj aktuelle tid
+ForumSpecialBBCode.spoiler=Tilføje spoiler
 
 #Transferlistfilters
 
