--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -489,7 +489,7 @@ HideSignatures.signaturetoggle=Signature
 MarkUnread.markunread=Marquer le sujet comme non lu jusqu'ici.
 EmbedMedia.EmbeddedImage=Image incrustée
 ForumStripHattrickLinks.ask=Voulez-vous supprimer le serveur du lien interne pour les rendre utilisable dans les forums ?
-MarkAllAsRead.title=Marquer les fils de toutes les tribunes comme lus
+MarkAllAsRead.title=Marquer tous les sujets comme lus
 
 # ForumTemplates
 ForumTemplates.make=Créer un modèle à partir de ce message
