--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -807,6 +807,7 @@ copy.skilltable.copied=클립보드에 스킬 테이블을 복사했습니다.
 copy.postid=PostID를 클립보드에 복사
 copy.postid.copied=클립보드에 Post ID [post\=%s]를 복사했습니다.
 copy.posting=%s 스타일로 복사
+copy.posting.title=%s 스타일로 포스팅 복사
 copy.posting.copied=클립보드에 Posting %s를 복사했습니다.
 copy.posting.style.ht-ml=HT-ML
 copy.posting.style.wiki=wiki
