*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9112 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -574,7 +574,7 @@ matchOrder.AddMatchManually=Ajouter un match manuellement
 matchOrder.swapPositions=Inversez les positions
 matchOrder.options=Options
 matchOrder.staminaDiscount=Effet de l'endurance
-matchOrder.staminaDiscount.title=Les notes de secteur sont accodées selon les contributions de chaque joueur pour chaque secteur
+matchOrder.staminaDiscount.title=Les notes de secteur dépendent des contributions de chaque joueur
 matchOrder.summary=Résumé
 matchOrder.tournamentMatch=Match de tournoi
 
