--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -474,6 +474,7 @@ ExtraPlayerInfo.defensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem 
 ExtraPlayerInfo.offensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein offensiver Trainer.
 ExtraPlayerInfo.balancedTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein ausgewogener Trainer.
 ManagerButtons.writeInGuestbook=Eintrag im Gästebuch verfassen
+LineupShortcut.lineup=Aufstellung
 ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
 
 #Transfer prices
@@ -1055,6 +1056,7 @@ TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.preferences=Einstellungen
 status.active=aktiv
 status.enabled=eingeschaltet aber nicht auf %s
 status.disabled=abgeschaltet
