--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -395,7 +395,7 @@ SafeForWork.icon=アイコン
 #Extrashortcuts
 ExtraShortcuts.statistics=統計
 ExtraShortcuts.transfers=移籍
-ExtraShortcuts.ManageCHPP=CHPP製品の管理
+ExtraShortcuts.ManageCHPP=CHPPソフトの管理
 ExtraShortcuts.prefs=設定
 ExtraShortcuts.ftprefs=FoxTrickの設定
 
@@ -526,8 +526,8 @@ ForumSpecialBBCode.article=ArticleIDを追加する
 ForumSpecialBBCode.clock=実際の時間を追加する
 ForumSpecialBBCode.spoiler=スポイラーを追加する
 ForumSpecialBBCode.pre="pre"フォーマットタグを挿入する
-ForumSpecialBBCode.table=相当するtableフォーマットタグを挿入する。選択されたテキストをテーブルに変換する。(線は行に変換。"%s"で区切られた文字はセルに変換されます。)
-ForumSpecialBBCode.tableSeparator=「 %S 」をセルに変換する
+ForumSpecialBBCode.table=相当するtableフォーマットタグを挿入する。選択されたテキストをテーブルに変換する。(行は横列に変換。"%s"で区切られた文字はセルに変換されます。)
+ForumSpecialBBCode.tableSeparator="%S"をセルに変換する
 ForumSpecialBBCode.enterSeparator=独自の区切り文字を入力する
 ForumSpecialBBCode.forumSymbol=「 %S 」を挿入する
 ForumSpecialBBCode.symbols=記号を挿入\: %s
@@ -653,11 +653,11 @@ match.role.captain.abbr=Capt.
 match.player.unknown=不明な選手
 
 # SkillTable
-SkillTable.header=スキル表
-SkillTable.switchView=表示切替
+SkillTable.header=スキルテーブル
+SkillTable.switchView=表示を切り替える
 SkillTable.addHomegrown=ユース出身選手を追加する
-SkillTable.showTimeInClub=クラブで時間を表示する(チームの在籍日数を表示)
-SkillTable.switchView.title=テーブルの表示を切り替え
+SkillTable.showTimeInClub=チームの在籍日数を表示する
+SkillTable.switchView.title=テーブルの表示を切り替える
 SkillTable.addHomegrown.title=現在のシニアチームから自チーム出身の選手を全て追加する
 SkillTable.showTimeInClub.title=シニアチームに選手が参加したときからの時間を表示する
 PlayerNumber=選手数
@@ -704,7 +704,7 @@ Last_stars_decline.abbr=Diff
 Last_position=最新のポジション
 Last_position.abbr=Pos
 #following string uses pluralForms
-Last_match_played_as_at=%3に、%2として%1分最後の試合に出場した
+Last_match_played_as_at=%3に、%2として%1分間、直近の試合に出場した
 Last_match_didnot_play=まだプレイしていません。
 Bruised=軽傷者
 Bruised.abbr=Bru
@@ -737,13 +737,13 @@ Hotlist.abbr=Hot
 Coach=コーチ
 CurrentSquad=現在のチーム
 Nationality=国籍
-Nationality.abbr=Nat
-Flag=旗
+Nationality.abbr=国
+Flag=国旗
 Flag.abbr=旗
 Player=選手
 Player.abbr=選手
 Age=年齢
-Age.abbr=年齢
+Age.abbr=歳
 Match=試合
 Series=シリーズ
 TransferCompare=移籍の比較
@@ -760,7 +760,7 @@ CurrentBidderShort=現在の最高入札者
 CurrentBidderShort.abbr=Bd
 
 skilltable.youthplayer=ユース選手
-skilltable.rebought_youthplayer=ユースプレーヤーを再購入する
+skilltable.rebought_youthplayer=買い戻されたユース選手
 
 #confirms
 ConfirmActions.bid=この選手に入札してもいいですか。価格は %s です。
@@ -797,8 +797,8 @@ copy.ht-ml=HT-MLにコピーする
 copy.table=HT-MLに表をコピーする
 
 #copy
-copy.playerad=プレーヤーの広告をコピーする
-copy.playerad.copied=プレーヤーの広告をクリップボードにコピーしました。
+copy.playerad=プレーヤーの情報をコピーする
+copy.playerad.copied=プレーヤーの情報をクリップボードにコピーしました。
 copy.matchid=matchIDをクリップボードにコピー
 copy.matchid.copied=match IDをクリップボードにコピーしました。
 copy.skilltable.title=スキルテーブルをクリップボードにコピーする(HT-ML用)
@@ -885,7 +885,7 @@ AddNextMatch=HT Liveに次の試合を追加する
 LastLineup=最後のラインアップ
 YouthMatches=ユースの試合
 more=詳細...
-less=小さく...
+less=小さく...（戻す）
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=地図を表示する
@@ -945,9 +945,9 @@ MyMonitor.header=私のモニター
 #following string uses pluralForms
 MyMonitor.teams=%s チームをモニター中です。;%s チームをモニター中です。
 MyMonitor.add=このチームをモニターする
-MyMonitor.remove=モニターからのこのチームを削除する
+MyMonitor.remove=モニターからこのチームを削除する
 MyMonitor.addHelp=モニターしたいチームに移動すると、サイドバーにチームを追加するボックスが表示されます
-MyMonitor.removeTeam=削除するチームを選択する
+MyMonitor.removeTeam=削除するチームを選択する：
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, \#%i)
 MyMonitor.type.senior=シニア
@@ -957,7 +957,7 @@ MyMonitor.htLive=HT ライブ
 
 # tickers
 ticker.type.welcome=ウェルカムメッセージ
-ticker.type.supporter=サポートチームのログイン
+ticker.type.supporter=サポートしているチームのログイン
 ticker.type.forum=フォーラムの返信
 ticker.type.transfer=移籍情報
 ticker.type.challenge=チャレンジ
@@ -968,7 +968,7 @@ ticker.type.others=その他
 
 # LocalTime
 LocalTime.hattrick=Hattrick時間
-LocalTime.hattrick.title=Hattrickタイムゾーンの時間。クリックすると、時計をローカルタイムに変換します。
+LocalTime.hattrick.title=Hattrickタイムゾーンの時間。クリックすると、時計を現地時間に変換します。
 LocalTime.local=現地時間
 LocalTime.local.title=ローカルタイムゾーンの時間。クリックすると、時計をHattrickタイムに変換します。
 
@@ -1045,7 +1045,7 @@ specialPaste.hint=Shift + 左クリック でペーストする
 
 # -----------------------------------------------------------------------------
 # option function strings
-Links.feeds=リンクリストのフィード(改行で区別)
+Links.feeds=リンクリストのフィード(改行で区分する)
 TickerAlert.enable=有効にする
 TickerAlert.sound=サウンド
 TeamPopupLinks.prefsCaption=リンクの設定
