Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9114 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -684,8 +684,8 @@ Form=Форма
 Form.abbr=ФО
 Loyalty=Оданост
 Loyalty.abbr=ОДА
-MotherClubBonus=Клупски бонус
-MotherClubBonus.abbr=КБ
+MotherClubBonus=Бонус за матични клуб
+MotherClubBonus.abbr=БМК
 Status=Повреде/картони/ТЛ
 Status.abbr=Статус
 Yellow_card=Жути картон
