*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9116 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1056,6 +1056,7 @@ TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Vorübergehend deaktivieren
 toolbar.preferences=Einstellungen
 status.active=aktiv
 status.enabled=eingeschaltet aber nicht auf %s
