*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9118 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -54,6 +54,7 @@ module.ExtraShortcuts.No9.desc=No9 Radio
 module.ExtraShortcuts.Latehome.desc=Latehome Radio
 module.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
+module.NewMail.NotifyMailSound.desc=Brīdināt ar skaņu, ja saņemts jauns e-pasta ziņojums
 module.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 module.CopyYouth.ScoutComment.desc=Skauta komentārs
 module.LeagueNewsFilter.transfers.desc=Rādīt tikai darījumus
@@ -73,6 +74,9 @@ module.TeamPopupLinks.AddNextMatch.desc=Pievienot nākamo spēli HT Live
 module.TeamPopupLinks.YouthMatches.desc=Jauniešu spēles
 module.TeamPopupLinks.Coach.desc=Treneris
 module.SkillColoring.skill_color.desc=Iekrāsot prasmes
+module.SkillColoring.skill_number.desc=Rādīt prasmes arī kā skaitļus, piemēram, labi (7)
+module.BackgroundFixed.desc=Statisks fona attēls.
+module.MatchIncome.desc=Rādīt pārdoto biļešu ienākumus spēles ziņojumā
 #YouthSkillHideUnknown
 module.YouthSkillHideUnknown.HideUnknown.desc=Slēpt nezināmās spēlētāju prasmes
 module.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
@@ -167,6 +171,7 @@ ExtraPlayerInfo.defensiveTrainer=%s treneris, kurš ir aizsardzības futbola pie
 ExtraPlayerInfo.offensiveTrainer=%s treneris, kurš ir uzbrūkoša futbola piekritējs.
 ExtraPlayerInfo.balancedTrainer=%s treneris, kas nav ne uzbrukuma, ne aizsardzības piekritējs.
 ManagerButtons.writeInGuestbook=Rakstīt viesu grāmatā
+LineupShortcut.lineup=Sastāvs
 ShowFriendlyBooked.ShowFriendlies=Parādīt draudzības spēles
 
 #Transfer prices
@@ -196,6 +201,7 @@ ForumPreview.preview=Priekšskatīt
 ForumPreview.send=Nosūtīt
 
 #ForumYouthIcons
+ForumYouthIcons.toolbar.tournament=Turnīri
 ForumSpecialBBCode.tableSeparator=Konvertēt "%s" šūnās
 ForumSpecialBBCode.enterSeparator=Ievadiet pielāgotu atdalītāju
 ForumSpecialBBCode.forumSymbol=Ievietot "%s"
@@ -244,6 +250,7 @@ matchOrder.options=Iespējas
 matchOrder.staminaDiscount=Izturības ietekme
 matchOrder.staminaDiscount.title=Sektora vērtējumi tiek samazināti saskaņā ar spēlētāja ieguldījumu tajos
 matchOrder.summary=Kopsavilkums
+matchOrder.tournamentMatch=Turnīra spēle
 
 #Skills
 Playmaking=Saspēlē
@@ -556,6 +563,8 @@ RapidId.view=Apskatīt
 RapidId.viewById=Atrast pēc ID
 RapidId.senior=Pieaugušo
 RapidId.youth=Jaunieši
+RapidId.tournaments=Turnīri
+RapidId.tournament=Turnīrs
 
 # HTMSPrediction
 HTMSPrediction.prediction=Prognozēt rezultātu
@@ -631,6 +640,7 @@ datetimestrings.hours=st.
 datetimestrings.minutes=min
 
 # buttons
+button.ok=OK
 button.cancel=Atcelt
 button.close=Aizvērt
 button.customize=Pielāgot
@@ -647,6 +657,7 @@ status.loading.abbr=…
 status.unknown.abbr=?
 
 oauth.authorize=Atļaut FoxTrick piekļūt komandas datiem
+oauth.why=Kāpēc vajadzētu autorizēt FoxTrick?
 oauth.link=Iegūt verifikācijas kodu no chpp.hattrick.org
 oauth.success=FoxTrick ir veiksmīgi autorizēts. Pārlādējiet lapu, lai redzētu vairāk FoxTrick sniegtās informācijas.
 
@@ -674,6 +685,7 @@ TeamPopupLinks.ShowOnMore=Rādīt pie Vairāk
 TeamPopupLinks.OpenNewTab=Atvērt jaunā cilnē
 
 #toolbar
+toolbar.title=FoxTrick
 status.active=aktīvs
 status.disabled=atspējots
 
@@ -689,6 +701,7 @@ prefs.view.by.page=Atlasīt pēc pēdējās HT lapas
 tab.matches=Spēles
 tab.forum=Diskusiju telpa
 tab.links=Saites
+tab.about=Par FoxTrick
 tab.changes=Izmaiņas
 tab.help=Palīdzība
 
@@ -710,13 +723,16 @@ prefs.feedback.dismiss=(Noklikšķiniet, lai noraidītu šo paziņojumu)
 link.title=Saites
 link.homepage=Mājas lapa
 link.bugTracker=Ziņot par kļūdu
+link.screenshots=Ekrānšāviņi
 link.recentChanges=Pēdējās izmaiņas
 
+releaseNotes.version=Versija\:
 
 about.copyright=Autortiesības
 about.maintainers=Uzturētāji
 about.developers=Izstrādātāji
 about.translators=Tulkotāji
 
+prefs.restoreDefault.ask=Vai tiešām vēlaties atjaunot noklusējuma iestatījumus?
 
 ###EOF
