--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -257,7 +257,9 @@ module.ContextMenuCopy.HtMl.desc=Añade una opción para copiar el contenido sel
 module.ContextMenuCopy.Table.desc=Añade una opción para copiar una tabla en HT-ML
 module.NewMail.desc=Resalta los correos nuevos recibidos
 module.NewMail.NotifyMail.desc=Muestra una notificación si es que hay nuevos correos para ti
+module.NewMail.NotifyMailSound.desc=Reproducir sonido con correo nuevo
 module.NewMail.NotifyForum.desc=Muestra una notificación si es que hay nuevos mensajes en el foro para ti
+module.NewMail.NotifyForumSound.desc=Reproducir sonido con Nueva respuesta en el foro
 module.CopyYouth.desc=Funciones para copiar reportes juveniles y otros recursos
 module.CopyYouth.TrainingReport.desc=Añade un boton para copiar el Reporte de entrenamiento en la página de entrenamiento juvenil.
 module.CopyYouth.ScoutComment.desc=Añade un boton para copiar el Reporte del scout en la página del jugador juvenil.
@@ -292,6 +294,7 @@ module.TeamPopupLinks.NextMatch.desc=Próximo partido
 module.TeamPopupLinks.AddNextMatch.desc=Añadir próximo partido a HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Partidos juveniles
 module.TeamPopupLinks.Coach.desc=Entrenador
+module.TeamPopupLinks.CustomLink.desc=Enlaces personalizados en líneas separadas. Las etiquetas [UserID] y [TeamID] se sustituiran por los IDs actuales. Ejemplo\: {"link"\:"http\://example.com/[teamid]", "titulo"\: "vínculo de ejemplo", "más"\: falso, "newTab"\: true}
 module.SkillColoring.desc=Mejor visualización de las habilidades
 module.SkillColoring.skill_color.desc=Habilidades en color
 module.SkillColoring.only_skill_color.desc=Solo coloca las habilidades en color y no valores de personalidad, ánimo de los aficionados, etc.
@@ -379,6 +382,7 @@ module.Filter.desc=Añade filtros a la página de Mejores Jugadores
 module.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
 module.RatingsDisplay.DenominationsRange.desc=En el rango de denominaciones 0 a 20
 module.RatingsDisplay.HatStats.desc=Como Hatstats
+module.SafeForWork.desc=Reemplaza el icono y el título de las pestañas de Hattrick para que se vean menos sospechosas. Asegúrate de que también deshabilitas todos los demás módulos que pueden ser riesgosos, especialmente los módulos de "Alertas".
 
 # -----------------------------------------------------------------------------
 
@@ -386,6 +390,8 @@ module.RatingsDisplay.HatStats.desc=Como Hatstats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+SafeForWork.title=Título
+SafeForWork.icon=Icono
 
 #Extrashortcuts
 ExtraShortcuts.statistics=Estadísticas
@@ -468,6 +474,7 @@ ExtraPlayerInfo.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 ExtraPlayerInfo.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 ExtraPlayerInfo.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 ManagerButtons.writeInGuestbook=Escribir en el Libro de Visitas
+LineupShortcut.lineup=Alineación
 ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
 
 #Transfer prices
@@ -570,6 +577,7 @@ matchOrder.options=Opciones
 matchOrder.staminaDiscount=Descuento por condición
 matchOrder.staminaDiscount.title=Las calificaciones del sector tienen un descuento de acuerdo a la contribución de los jugadores de ese sector
 matchOrder.summary=Resumen
+matchOrder.tournamentMatch=Partido de Torneo
 
 #Skills
 Playmaking=Jugadas
@@ -1027,6 +1035,7 @@ exception.error=Error %s
 
 log.header=Log de Foxtrick
 # keep the following line untranslated
+log.env=Versión %1, %2 plataforma, %3 localización, %4 diseño, %5 dirección
 
 ReadHtPrefs.HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es\: %s.
 
@@ -1047,6 +1056,10 @@ TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Deshabilitar Foxtrick temporalmente
+toolbar.featureHighlight=Resaltar características
+toolbar.translationKeys=Mostrar claves de traducción
+toolbar.preferences=Preferencias
 status.active=activo
 status.enabled=habilitado, pero no activo en %s
 status.disabled=inhabilitado
@@ -1106,6 +1119,9 @@ prefs.loadSave.import.notice=Pega tus preferencias guardadas en el cuadro de tex
 prefs.additional.title=Opciones Adicionales
 prefs.additional.xmlLoad=Cargar XMLs para información extra desde Hattrick
 prefs.additional.smallCopyIcons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
+prefs.additional.anstoss2Icons=Usar iconos de Anstoss2 para especialidades
+prefs.additional.featureHighlight=Resaltar características de FoxTrick
+prefs.additional.translationKeys=Mostrar claves de traducción en lugar de traducciones
 prefs.additional.HTMLDebugLog=Show additional debug output on Hattrick page (for developers)
 
 prefs.feedback.saved=Preferencias Guardadas\!
@@ -1125,6 +1141,7 @@ link.recentChanges=Cambios recientes
 
 releaseNotes.show=Mostrar notas de la versión luego de que Foxtrick se actualice
 releaseNotes.showFor=Notas de la versión para\:
+releaseNotes.version=Versión\:
 
 about.copyright=Copyright
 about.maintainers=Responsables de mantenimiento
