*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9136 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -296,9 +296,13 @@ ForumYouthIcons.youthteamid=Indsæt ungdoms hold link.
 ForumYouthIcons.youthmatchid=Indsæt ungdoms kamp link.
 ForumYouthIcons.youthseries=Indsæt ungdoms liga link.
 ForumSpecialBBCode.q=Tilføj citat
-ForumSpecialBBCode.br=Tilføje linjeskift
+ForumSpecialBBCode.br=Tilføj linjeskift
 ForumSpecialBBCode.clock=Tilføj aktuelle tid
 ForumSpecialBBCode.spoiler=Tilføj spoiler
+ForumSpecialBBCode.pre=Indsæt 'pre' format link
+ForumSpecialBBCode.table=Indsæt "tabel" format Link-filter til konvertere markerede tekst til en tabel (linjer konverteres i rækker. Tekst adskilt af "%s" vil blive konverteret til celler.)
+ForumSpecialBBCode.tableSeparator=Konvertere "%s" til celler
+ForumSpecialBBCode.enterSeparator=Angiv en brugerdefineret separator
 ForumSpecialBBCode.forumSymbol=Indsæt "%s"
 ForumSpecialBBCode.symbols=Indsæt symbol\: %s
 
@@ -345,14 +349,45 @@ Winger.abbr=FL
 Scoring=Målscoring
 Scoring.abbr=MS
 Passing=Pasningsspil
+Passing.abbr=PS
 Defending=Forsvarsspil
+Defending.abbr=FS
 Keeper=Målmandsspil
+Keeper.abbr=MM
 Set_pieces=Dødbolde
+Set_pieces.abbr=DB
 
+PsicoTSI=PsicoTSI (gennemsnitlig form)
+PsicoTSI.abbr=Psico
+HTMS_Ability=HTMS Points evner
+HTMS_Ability.abbr=Evne
+HTMS_Potential=HTMS Points Potentielle
+HTMS_Potential.abbr=Potentielle
 
+PlayerCategory=Spiller kategori
+PlayerCategory.abbr=Kat
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
+categories.GK=MM
+categories.WB=FB
+categories.CD=CF
+categories.W=F
+categories.IM=CM
+categories.FW=A
+categories.S=I
+categories.R=R
+categories.E1=E1
+categories.E2=E2
 
 #match positions
+match.pos.kp=Målmand
+match.pos.kp.abbr=MM
+match.pos.lb=Venstre back
+match.pos.lb.abbr=VB
+match.pos.lcd=Venstre central forsvar
+match.pos.lcd.abbr=VCF
+match.pos.mcd=Midterste central forsvar
+match.pos.mcd.abbr=MCF
+match.pos.rcd=Højre central forsvar
 match.pos.rcd.abbr=HCF
 match.pos.rb=Højre back
 match.pos.rb.abbr=HB
@@ -421,6 +456,7 @@ Speciality.abbr=SP
 Last_match=Sidste Kamp
 Last_match.abbr=Sidste
 Last_stars=Seneste stjerner
+Last_stars.abbr=SS
 Last_stars_decline=Sidste stjerne tilbagegang
 Last_stars_decline.abbr=forskel
 Last_position=Seneste position
@@ -455,6 +491,7 @@ JoinedSince=Tiltrådte siden
 JoinedSince.abbr=Siden
 Hotlist=HotList
 Hotlist.abbr=Hot
+Coach=Træner
 CurrentSquad=Nuværende trup
 Nationality=Nationalitet
 Nationality.abbr=Nationalitet
@@ -559,15 +596,22 @@ MatchReportFormat.penaltyShootOut=Straffesparkskonkurrence
 MatchReportFormat.result=Resultat
 
 #teampopups
+Manager=Manager
+Team=Hold
 Matches=Kampe
 Players=Spillere
 last_5_ips=5 seneste indlogninger
 Guestbook=Gæstebog
 SendMessage=Send message
+Challenge=Udfordring
+Achievements=Bedrifter
+TransferHistory=Transfer historik
 TeamHistory=Klubhistorik
 NextMatch=Næste kamp
 AddNextMatch=Tilføj næste kamp til HT Live
 YouthMatches=Ungdomskampe
+more=Mere...
+less=mindre...
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Vis kort
@@ -604,7 +648,7 @@ truthTable.predicted_position=\#
 truthTable.name=Hold
 truthTable.real_position=Rigtige pos.
 truthTable.real_points=Reelle points
-truthTable.predicted_points=forudsigelses points
+truthTable.predicted_points=forudsagte points
 truthTable.difference=±
 truthTable.notAvailableYet=Data foreligger ikke endnu. Gå til HTMS for at oprette de nødvendige data
 truthTable.tableAtHTMS=Denne tabel på HTMS webside
@@ -664,6 +708,22 @@ team.status.booked=Venskabskamp arrangeret
 #next 6 use pluralFroms
 
 # buttons
+button.ok=OK
+button.cancel=Annuller
+button.close=Luk
+button.customize=Tilpasse
+button.save=Gem
+button.go=Go\!
+button.add=Tilføj
+button.remove=Fjern
+button.top=Top
+button.authorize=Tillade
+button.export=Eksportere
+button.import=Importer
+button.restoreDefault=Gendan standard
+button.deleteToken=Slet token
+button.disableAll=Deaktiver alle
+button.revokePermissions=Tilbagekald tilladelser
 button.copy=kopiere
 button.up=Op
 button.down=Ned
@@ -688,7 +748,7 @@ specialPaste.hint=Indsæt med Shift + Venstre klik.
 Links.feeds=Feeds af link lister (adskilt med linjeskift)
 TickerAlert.enable=Aktiver
 TickerAlert.sound=Lyd
-TeamPopupLinks.prefsCaption=Linkindstillinger
+TeamPopupLinks.prefsCaption=Link indstillinger
 TeamPopupLinks.ShowByDefault=Vis som standard
 TeamPopupLinks.ShowOnMore=Vis mere
 TeamPopupLinks.OpenNewTab=Åben i ny fane
