*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9137 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -251,6 +251,7 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.future=Spilleren kan blive forfremmet %1 dag senere, på %2.;Spilleren kan blive forfremmet %1 dage senere på %2.
 YouthPromotes.today=Spiller kan rykkes op i dag\!
 
 #teamstats+filters
@@ -295,8 +296,13 @@ ForumYouthIcons.youthplayerid=Indsæt ungdom spiller link.
 ForumYouthIcons.youthteamid=Indsæt ungdoms hold link.
 ForumYouthIcons.youthmatchid=Indsæt ungdoms kamp link.
 ForumYouthIcons.youthseries=Indsæt ungdoms liga link.
+ForumYouthIcons.tournamentid=Indsæt turnerings link.
+ForumYouthIcons.tournamentmatchid=Indsæt turnering kamp link.
 ForumSpecialBBCode.q=Tilføj citat
 ForumSpecialBBCode.br=Tilføj linjeskift
+ForumSpecialBBCode.user=Tilføj BrugerID
+ForumSpecialBBCode.kit=Tilføj DragtID
+ForumSpecialBBCode.article=Tilføj ArtikelID
 ForumSpecialBBCode.clock=Tilføj aktuelle tid
 ForumSpecialBBCode.spoiler=Tilføj spoiler
 ForumSpecialBBCode.pre=Indsæt 'pre' format link
@@ -309,6 +315,7 @@ ForumSpecialBBCode.symbols=Indsæt symbol\: %s
 #Transferlistfilters
 
 #Filter
+Filters.addFilterOptions=Tilføj filterindstillinger
 Filters.clear=ryd
 Filters.noFilter=Ingen filter
 Filters.none=Ingen
@@ -338,8 +345,12 @@ matchOrder.noMatchSelected=Ingen kamp er valgt
 matchOrder.comparedTo=sammenlignet med\:
 matchOrder.previousPrediction=Tidligere forudsigelse
 matchOrder.AddMatchManually=Tilføje en kamp manuelt
+matchOrder.swapPositions=Byt sider
 matchOrder.options=Indstillinger
+matchOrder.staminaDiscount=Konditions effekt
+matchOrder.staminaDiscount.title=Sektor bedømmelser påvirkes ifølge bidrag fra hver spiller til hver sektor
 matchOrder.summary=Resumé
+matchOrder.tournamentMatch=Turnerings kamp
 
 #Skills
 Playmaking=Spilfordeling
@@ -444,6 +455,9 @@ Stamina=Kondition
 Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
+Loyalty=Loyalitet
+Loyalty.abbr=Lo
+MotherClubBonus=Moder klub bonus
 MotherClubBonus.abbr=MK
 Status=Status
 Status.abbr=Status
@@ -457,12 +471,13 @@ Last_match=Sidste Kamp
 Last_match.abbr=Sidste
 Last_stars=Seneste stjerner
 Last_stars.abbr=SS
-Last_stars_decline=Sidste stjerne tilbagegang
+Last_stars_decline=Sidste brun stjerner
 Last_stars_decline.abbr=forskel
 Last_position=Seneste position
 Last_position.abbr=S-Pos
 #following string uses pluralForms
 Last_match_played_as_at=Spillet %1 min som %2 i sin sidste kamp på%3.
+Last_match_didnot_play=Har endnu ikke spillet.
 Bruised=Mærket
 Bruised.abbr=Mær
 Injured=Skadet
@@ -528,7 +543,9 @@ ConfirmActions.sackstaff=Ønsker du at fyr %num %slags?
 # links
 
 #following string uses pluralForms
+notify.newMail=Du har modtaget %s nye mail.;Du har modtaget %s nye mails.
 #following string uses pluralForms
+notify.newForumMessage=Der er %s nye forum svar til dig.;Der er %s nye forum svar til dig.
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -609,6 +626,7 @@ TransferHistory=Transfer historik
 TeamHistory=Klubhistorik
 NextMatch=Næste kamp
 AddNextMatch=Tilføj næste kamp til HT Live
+LastLineup=Sidste opstilling
 YouthMatches=Ungdomskampe
 more=Mere...
 less=mindre...
@@ -667,6 +685,7 @@ CrossTable.noMatches=Ingen kampe er blevet spillet endnu.
 # MyMonitor
 MyMonitor.header=Min overvågninger
 #following string uses pluralForms
+MyMonitor.teams=%s hold i skærm; %s hold i skærm
 MyMonitor.add=Overvåg dette hold
 MyMonitor.remove=Fjern overvågning af dette hold
 MyMonitor.addHelp=Gå til det hold, som du ønsker at overvåge, og du vil se en boks på sidebjælken for at tilføje holdet.
@@ -729,11 +748,25 @@ button.up=Op
 button.down=Ned
 button.goto=Gå til %s
 
+status.loading=Indlæser...
+status.loading.abbr=…
+status.error=Fejl
+status.error.abbr=\!
+status.unknown=Ukendt
+status.unknown.abbr=?
 
+oauth.authorize=Tillad FoxTrick adgang til dit hold data
+oauth.instructions=Om et øjeblik vises et link til chpp.hattrick.org nedenfor. Åbn linket, udfyld dit brugernavn og din adgangskode for at få en bekræftelseskode, og kopiere den til boksen nedenfor for at tillade FoxTrick adgang til dit holds data. FoxTrick vil ikke får kendskab til din adgangskoden i hele processen.
+oauth.why=Hvorfor bør jeg tillade FoxTrick adgang?
+oauth.link=Få bekræftelseskode fra chpp.hattrick.org
+oauth.success=FoxTrick er godkendt\! Venligst Genindlæs denne side for at få vist omfattende oplysninger, som leveres af FoxTrick.
 
+api.failure=Dataadgang til Hattrick mislykkedes. Du skal give FoxTrick tilladelse for at få adgang til dit holds data. Hvis du har gjort det, tjek din netværksforbindelse, eller prøv igen senere.
+api.serverUnavailable=Server utilgængelig
 api.clearCache=Ryd cache
 api.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysninger fra Hattrick servere efter behov. Indtil du lukker din browser, vil FoxTrick efterfølgende, bruge lokalt lagrede kopier af disse oplysninger. I sjældne tilfælde kan oplysningerne blive forældet. Ryd cache, hvis du ønsker FoxTrick skal hente de ekstra informationer igen.
 
+exception.error=Fejl %s
 
 # keep the following line untranslated
 
@@ -754,23 +787,80 @@ TeamPopupLinks.ShowOnMore=Vis mere
 TeamPopupLinks.OpenNewTab=Åben i ny fane
 
 #toolbar
+toolbar.title=FoxTrick
+toolbar.preferences=Indstillinger
+status.active=aktiv
+status.enabled=﻿aktiverede, men ikke aktive på %s
+status.disabled=deaktiveret
 
 # Captions and labels of foxtrick preferences
+prefs.title=FoxTrick Indstillinger
 
+prefs.view.by.category=Få vist efter kategori
+prefs.view.by.page=Få vist ved sidste HT side
 
+module.screenshot=Screenshot
+module.link=Du kan kopiere og indsætte dette link i forummet for at omdirigere til her
 
 # tabs in preferences page
 #tabs
+tab.main=Primær
+tab.on_page=Moduler på denne side
+tab.universal=Universal moduler
+tab.informationAggregation=Information sammenlægning
+tab.shortcutsAndTweaks=Genveje og forbedringer
+tab.presentation=Præsentation
+tab.matches=Kampe
+tab.forum=Forum
+tab.links=Links
+tab.alert=advare
+tab.about=Om
+tab.changes=Ændringer
+tab.help=Hjælp
 
+prefs.setup=Setup
+prefs.setup.desc=Disse er dine indstillinger som FoxTrick har registreret. Hvis de er forkerte, {indrapporter}.
+prefs.setup.locale=Lokale
+prefs.setup.dateFormat=Datoformat
+prefs.setup.country=Land
 
+prefs.storedData.title=Gemte indstillinger
+prefs.storedData.restoreDefault=Gendan standard indstillinger (kun indstillinger, ikke personlige indstillinger.)
+prefs.storedData.oauth.delete=Slet OAuth token/hemmelig for det valgte hold.
 # NOTE - please preserve the braces, inner content will be converted to link
+prefs.storedData.oauth.delete.desc=Gælder kun for denne browser. For at fuldstændig tilbagekalde Foxtricks adgang til et hold, bruge Hattrick's {CHPP forvaltning}.
+prefs.storedData.disableAll=Deaktiver alle moduler
+prefs.storedData.revokePermissions=Tilbagekald alle valgfri tilladelser (kun Chrome)
+
+prefs.disable.title=Deaktiver FoxTrick
+prefs.disable.temporary=Deaktiver midlertidigt
+prefs.disable.stage=Deaktiver på Stage server
+
+prefs.loadSave.title=Eksportere eller importere indstillinger
+prefs.loadSave.export=Eksportere indstillinger og/eller personlige indstillinger
+prefs.loadSave.export.prefs=Indstillinger
+prefs.loadSave.export.notes=Personlige indstillinger (skabeloner, brugerdefinerede hyperlinks og transfer filtre)
+prefs.loadSave.export.token=OAuth token/hemmelig
 
 
 
+link.title=Links
+link.homepage=Hjemmeside
+link.bugTracker=Rapportere en fejl
+link.hattrickForum=FoxTrick forum på Hattrick
+link.screenshots=Screenshots
+link.nightlyFirefox=Udviklings versioner til Firefox
+link.nightlyChrome=Udviklings versioner til Google Chrome
+link.nightlyOpera=Udviklings versioner til Opera
+link.nightlySafari=Udviklings versioner til Safari
+link.recentChanges=Seneste ændringer
 
 
-
-
+about.copyright=Ophavsret
+about.maintainers=﻿Vedligeholdere
+about.developers=Udviklere
+about.translators=Oversættere
+about.designers=Designere
 
 
 ###EOF
