--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -294,6 +294,7 @@ module.TeamPopupLinks.NextMatch.desc=Link naar de volgende wedstrijd
 module.TeamPopupLinks.AddNextMatch.desc=Voeg volgende wedstrijd toe aan HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Link naar de jeugdwedstrijden
 module.TeamPopupLinks.Coach.desc=Link naar trainer
+module.TeamPopupLinks.CustomLink.desc=Aangepaste koppelingen op aparte regels. De tags [UserID] en [TeamID] zullen worden vervangen door de werkelijke id's. Voorbeeld\: {"link"\:"http\://example.com/[teamid]", "titel"\: "voorbeeld-link", "meer"\: false, "newTab"\: true}
 module.SkillColoring.desc=Betere visualisatie van vaardigheden en gradaties
 module.SkillColoring.skill_color.desc=Geef vaardigheden en gradaties een kleur
 module.SkillColoring.only_skill_color.desc=Geef alleen vaardigheden een kleur en niet gradaties als persoonlijkheid, stemming supporters, etc.
@@ -381,6 +382,7 @@ module.Filter.desc=Voeg filters toe aan de lijst met top spelers
 module.RatingsDisplay.desc=Laat gemiddelde ratings in de statistieken in het 0-20 bereik zien
 module.RatingsDisplay.DenominationsRange.desc=In de 0-20 benaming
 module.RatingsDisplay.HatStats.desc=Als HatStats
+module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick tabbladen om minder verdacht te lijken. Zorg ervoor dat u alle andere modules die riskant zijn, vooral de "Alert" modules, ook uitschakelt.
 
 # -----------------------------------------------------------------------------
 
@@ -388,6 +390,8 @@ module.RatingsDisplay.HatStats.desc=Als HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+SafeForWork.title=Titel
+SafeForWork.icon=Pictogram
 
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistieken
@@ -470,6 +474,7 @@ ExtraPlayerInfo.defensiveTrainer=Een %s trainer die verdedigend is ingesteld
 ExtraPlayerInfo.offensiveTrainer=Een %s trainer die aanvallend is ingesteld
 ExtraPlayerInfo.balancedTrainer=Een %s trainer die noch aanvallend noch verdedigend is ingesteld
 ManagerButtons.writeInGuestbook=Schrijf in het gastenboek
+LineupShortcut.lineup=Opstelling
 ShowFriendlyBooked.ShowFriendlies=Laat vriendschappelijk zien
 
 #Transfer prices
@@ -572,6 +577,7 @@ matchOrder.options=Opties
 matchOrder.staminaDiscount=Conditie correctie
 matchOrder.staminaDiscount.title=Sector ratings worden verdisconteerd op basis van spelers' bijdrage aan deze sector
 matchOrder.summary=Samenvatting
+matchOrder.tournamentMatch=Toernooi wedstrijd
 
 #Skills
 Playmaking=Positiespel
@@ -1048,6 +1054,10 @@ TeamPopupLinks.OpenNewTab=Openen in nieuwe tab
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Tijdelijk uitschakelen
+toolbar.featureHighlight=Markeer functies
+toolbar.translationKeys=Laat vertalingssleutels zien
+toolbar.preferences=Voorkeuren
 status.active=actief
 status.enabled=aangezet, maar niet actief op %s
 status.disabled=uitgezet
@@ -1107,6 +1117,9 @@ prefs.loadSave.import.notice=Plak je opgeslagen voorkeuren in het tekstvak en kl
 prefs.additional.title=Meer opties
 prefs.additional.xmlLoad=Laad XMLs voor extra informatie van Hattrick
 prefs.additional.smallCopyIcons=Kleine kopieericonen in de kop in plaats van in een aparte box aan de zijkant
+prefs.additional.anstoss2Icons=Anstoss2 pictogrammen gebruiken voor specialiteiten
+prefs.additional.featureHighlight=Markeer alle Foxtrick functies
+prefs.additional.translationKeys=Laat vertalingssleutels zien in plaats van vertalingen
 prefs.additional.HTMLDebugLog=Toon extra debug uitvoer op Hattrick pagina's (voor ontwikkelaars)
 
 prefs.feedback.saved=Voorkeuren opgeslagen\!
@@ -1126,6 +1139,7 @@ link.recentChanges=Recent changes
 
 releaseNotes.show=Laat veranderingen aan FoxTrick zien na een update
 releaseNotes.showFor=Laat de notities van veranderingen zien voor\:
+releaseNotes.version=Versie\:
 
 about.copyright=Copyright
 about.maintainers=Maintainers
