*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9146 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -90,6 +90,7 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Umetnite Youtube video
 module.EmbedMedia.EmbedVimeoVideos.desc=Umetnite Vimeo video
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Umetnite FunnyOrDie video
 module.EmbedMedia.EmbedDailymotionVideos.desc=Umetnite Dailymotion video
+module.EmbedMedia.EmbedModeOEmebed.desc=Koristite oEmbed za umetanje medija (samo Firefox i Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Zamijenite link teksta oznakom medijske stavke, npr. naziv slike
 module.EmbedMedia.EmbedSoundCloud.desc=Umetnite Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Umetnite Flickr slike
