--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -91,6 +91,7 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Įdėti „YouTube“ rinkmenas
 module.EmbedMedia.EmbedVimeoVideos.desc=Įdėti „Vimeo“ rinkmenas
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Įdėti „FunnyOrDie“ rinkmenas
 module.EmbedMedia.EmbedDailymotionVideos.desc=Įdėti „Dailymotion“ rinkmenas
+module.EmbedMedia.EmbedModeOEmebed.desc=Naudoti „oEmbed“ rinkmenoms įdėti (tik „Firefox“ ir „Chrome“ naršyklėms)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Pakeisti nuorodos tekstą į rinkmenos pavadinimą
 module.EmbedMedia.EmbedSoundCloud.desc=Įdėti „Soundcloud“ rinkmenas
 module.EmbedMedia.EmbedFlickrImages.desc=Įdėti „Flickr“ paveikslėlius
@@ -468,7 +469,7 @@ LeagueNewsFilter.lineupChanges=Sudėties pakeitimai
 #team pages
 sidebarBox.actions=Veiksmai
 TeamSelectBox.selectplayer=Pasirinkti žaidėją
-ExtendedPlayerDetails.perseason=per sez.
+ExtendedPlayerDetails.perseason=\ per sez.
 ExtraPlayerInfo.defensiveTrainer=%s gynybinio stiliaus treneris.
 ExtraPlayerInfo.offensiveTrainer=%s atakuojančio stiliaus treneris.
 ExtraPlayerInfo.balancedTrainer=%s neutralaus stiliaus treneris.
