--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -12,6 +12,7 @@ properties.translators=Izstrādātāji
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
+direction=ltr
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
 pluralFormRuleID=pluralFormRule3
 
@@ -56,6 +57,7 @@ module.ExtraShortcuts.No9.desc=No9 Radio
 module.ExtraShortcuts.Latehome.desc=Latehome Radio
 module.ExtraShortcuts.Downtime.desc=Dīkstāves Radio
 #CopyMatchID
+module.NewMail.NotifyMail.desc=Parādīt paziņojumu, ja saņemtas jaunas e-pasta ziņas
 module.NewMail.NotifyMailSound.desc=Brīdināt ar skaņu, ja saņemts jauns e-pasta ziņojums
 module.CopyYouth.TrainingReport.desc=Treniņu ziņojums
 module.CopyYouth.ScoutComment.desc=Skauta komentārs
@@ -414,6 +416,7 @@ Age=Vecums
 Age.abbr=Vec.
 Match=Spēle
 Series=Līga
+TransferCompare=Darījumu salīdzināšana
 TransferCompare.abbr=DS
 Bookmark=Iegrāmatot
 Deadline=Beigu termiņš
