Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9147 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -90,13 +90,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео кли
 module.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео клипове
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео клипове
 module.EmbedMedia.EmbedDailymotionVideos.desc=Угради Dailymotion видео клипове
-module.EmbedMedia.EmbedModeOEmebed.desc=Користи 'oEmbed' за уградњу медија клипова. (само за Chrome)  
+module.EmbedMedia.EmbedModeOEmebed.desc=Користи 'oEmbed' за уградњу медија клипова. (само за Firefox и Chrome)  
 module.EmbedMedia.ReplaceLinksByTitles.desc=Замени текст линка именом медија клипа, нпр. именом слике. 
 module.EmbedMedia.EmbedSoundCloud.desc=Угради Soundcloud 
 module.EmbedMedia.EmbedFlickrImages.desc=Угради Flickr слике
 module.EmbedMedia.EmbedDeviantArtImages.desc=Угради Deviantart слике
 module.EmbedMedia.EmbedGenericImages.desc=Угради слику ако је у питању директан линк до ње
 module.EmbedMedia.EmbedGenericImagesClever.desc=Покушај да погодиш праву адресу слике ако оригинални линк не изгледа као да директно води до слике.
+module.EmbedMedia.EmbedImageshack.desc=Проширена подршка за ImageShack  (само за Firefox и Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
