*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9150 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -207,6 +207,20 @@ ForumPreview.send=Nosūtīt
 
 #ForumYouthIcons
 ForumYouthIcons.toolbar.tournament=Turnīri
+ForumYouthIcons.toolbar.other=Citi
+ForumYouthIcons.youthplayerid=Ievietot jauniešu spēlētāja birku.
+ForumYouthIcons.youthteamid=Ievietot jauniešu komandas birku.
+ForumYouthIcons.youthmatchid=Ievietot jauniešu spēles birku.
+ForumYouthIcons.youthseries=Ievietot jauniešu līgas birku.
+ForumYouthIcons.tournamentid=Ievietot turnīra birku.
+ForumYouthIcons.tournamentmatchid=Ievietot turnīra spēles birku.
+ForumSpecialBBCode.q=Ievietot citātu
+ForumSpecialBBCode.br=Ievietot rindiņas pārtraukumu
+ForumSpecialBBCode.user=Pievienot UserID
+ForumSpecialBBCode.kit=Pievienot KitID
+ForumSpecialBBCode.article=Pievienot ArticleID
+ForumSpecialBBCode.clock=Ievietot faktisko laiku
+ForumSpecialBBCode.spoiler=Pievienot spoileri
 ForumSpecialBBCode.tableSeparator=Konvertēt "%s" šūnās
 ForumSpecialBBCode.enterSeparator=Ievadiet pielāgotu atdalītāju
 ForumSpecialBBCode.forumSymbol=Ievietot "%s"
