*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9151 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -287,7 +287,7 @@ module.TeamPopupLinks.Challenge.desc=チャレンジ
 module.TeamPopupLinks.Achievements.desc=成績
 module.TeamPopupLinks.TransferHistory.desc=移籍履歴
 module.TeamPopupLinks.TeamHistory.desc=クラブの歴史
-module.TeamPopupLinks.LastLineup.desc=最後のラインナップ
+module.TeamPopupLinks.LastLineup.desc=直近のラインナップ
 module.TeamPopupLinks.NextMatch.desc=次の一致
 module.TeamPopupLinks.AddNextMatch.desc=HT Liveに次の試合を追加
 module.TeamPopupLinks.YouthMatches.desc=ユースの試合
@@ -422,11 +422,11 @@ TeamStats.General=全般
 TeamStats.PlayerNotToOld=18歳以下の選手
 TeamStats.PlayerToOld=19歳以上の選手
 TeamStats.Cards=カード
-TeamStats.Injured=重傷者
+TeamStats.Injured=負傷者
 TeamStats.TransferListed=移籍リストにいる
 TeamStats.Pictures=アバター
-TeamStats.PlayedLatest=最後の試合に出場した
-TeamStats.NotPlayedLatest=直近の試合に出場しなかった
+TeamStats.PlayedLatest=直近の試合に出場
+TeamStats.NotPlayedLatest=直近の試合に不出場
 TeamStats.NotTransferListed=移籍リストにいない
 TeamStats.ActivePlayers=現役選手
 TeamStats.HomeGrownPlayers=自チーム出身の選手
